2002-11-18  Jordi Mallach  <jordi@sindominio.net>

	* AUTHORS: added Gerfried.

2002-11-18  Jordi Mallach  <jordi@sindominio.net>

	* configure.in: AM_GNU_GETTEXT was needed after all (generates
	po/Makefile) (or I am missing something).
	(ALL_LINGUAS): added German (de).

2002-11-18  Jordi Mallach  <jordi@sindominio.net>

	* src/commands.c, src/dialogs.c, src/gtetrinet.c: unify a few strings,
	to ease translator work (thanks, Gerfried Fuchs).

2002-11-08  Jordi Mallach  <jordi@sindominio.net>

	* Makefile.am: remove ACLOCAL_AMFLAGS definition.

2002-11-08  Jordi Mallach  <jordi@sindominio.net>

	* configure.in: er, AC_SUBST GETTEXT_PACKAGE too.

2002-11-08  Jordi Mallach  <jordi@sindominio.net>

	* configure.in: define GETTEXT_PACKAGE.

2002-10-30  Jordi Mallach  <jordi@sindominio.net>

	* TODO: added a list of issues to tackle.

2002-10-28  Bastien Nocera  <hadess@hadess.net>

	* Makefile.am: remove intl as a subdir
	* configure.in: remove the evil AM_GNU_GETTEXT call, no need for
	intl/
	* intl/*: removed

2002-10-28  Bastien Nocera  <hadess@hadess.net>

	* Makefile.am: removed m4/ added intl/
	* autogen.sh: use a gnome2 one
	* configure.in: updated to gnome2

2002-10-28  Jordi Mallach  <jordi@sindominio.net>

	* AUTHORS: added a random list of people who should be creditted.
	Probably missing many.
	* NEWS: added 0.5.0 items.

2002-10-28  Jordi Mallach  <jordi@sindominio.net>

	* src/commands.c (about_command): rename documentors to documenters.
	Add translator credits. Assign the gtetrinet icon to the about dialog.
	Add a hyperlink to GTetrinet's homepage.
	* src/gtetrinet.c (main): set bind_textdomain_codeset to "UTF-8".
	Remove useless setlocale call.

	* configure.in: bump version to 0.5.0pre1.

2002-10-28  Jordi Mallach  <jordi@sindominio.net>

	* Finally, GNOME2!

	* configure.in: require GTK 2.0.0 and various GNOME2 libs.
	* src/Makefile.am: new GNOME2 includes.
	* src/client.c, src/client.h, src/commands.c, src/dialogs.c,